--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@
         width: 80%;
         height: 60px;
         float: left;
-        color: #ffffff;
+        color:#000;
         font-size: 15px;
         font-weight: 400;
         text-indent: 18px;
         padding: 0 70px 0 0;
-        background: rgba(255, 255, 255, 0.2);
+        background:#e8f5e9;
         border-radius: 5px 25px 25px 5px;
         border: 0px;
         box-shadow: none;
